# vega_hm

./: .gitignore  CMakeLists.txt  README.md  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  index.html  main.cpp  mathlib_8h.html  mathlib_8h_source.html
.github/workflows/: build.yaml  ci.yaml
benchmarks/: CMakeLists.txt  benchmark_mathlib.cpp
docs/: Doxyfile
include/: mathlib.h
search/: functions_0.js  functions_1.js  searchdata.js
src/: mathlib.cpp
tests/: CMakeLists.txt  test_mathlib.cpp
